Add redoc middleware to explore api through swagger.yaml (#4)
